# Nekogram

./: .gitignore  .gitlab-ci.yml  PlayStore.patch  README.md  build.gradle  crowdin.yml  gradle.properties  settings.gradle
.github/: FUNDING.yml
.github /ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: android.yml
TMessagesProj/: appcenter-post-build.sh  appcenter-pre-build.sh  build.gradle  google-services.json  proguard-dic.txt  proguard-rules.pro
TMessagesProj/config/: release.keystore
TMessagesProj/config/debug/: AndroidManifest.xml  AndroidManifest_SDK23.xml
TMessagesProj/config/release/: AndroidManifest.xml  AndroidManifest_SDK23.xml
TMessagesProj/jni/: Android.mk  Application.mk  CMakeLists.txt  TgNetWrapper.cpp  gifvideo.cpp  image.cpp  jni.c  utilities.cpp
TMessagesProj/jni/colorado/: CMakeLists.txt  cert.cpp  colorado.cpp  colorado.h  logging.h  obfs-string.h  utils.cpp  utils.h
TMessagesProj/jni/integrity/: CMakeLists.txt  apk-sign-v2.c  common.c  common.h  genuine.c  genuine.h  pm.c
TMessagesProj/jni/intro/: IntroRenderer.c
TMessagesProj/jni/tgnet/: Connection.cpp  ConnectionSocket.cpp  ConnectionSocket.h  ConnectionsManager.cpp  ConnectionsManager.h  Datacenter.h  Defines.h  Handshake.cpp
TMessagesProj/jni/voip/: CMakeLists.txt
TMessagesProj/src/main/: AndroidManifest.xml
TMessagesProj/src/play/: AndroidManifest.xml
TMessagesProj_App/: build.gradle  google-services.json
gradle/wrapper/: gradle-wrapper.properties
(+640 files in other folders)
